syntax = "proto3";

package edge.oauth.v1;

option go_package = "api";

// 基于OAuth2.0的授权服务
service OAuthClient {
    rpc Auth (AuthRequest) returns (AuthResponse);
    rpc AccessToken (AccessTokenRequest) returns (AccessTokenResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc Profile (ProfileRequest) returns (ProfileResponse);
}

message AuthRequest {
    string scope = 1;
    string response_type = 2;
    string redirect_url = 3;
    string state = 4;
}
message AuthResponse {
    string redirect_to = 1;
}

message AccessTokenRequest {
    string code = 1;
    string state = 2;
}

message Token {
    string access_token = 1;
    string refresh_token = 2;
    string scope = 3;
    int64 expires_in = 4;
    string token_type = 5;
    string id_token = 6;
}

message Identity {
    string OpenId = 1;
    string UnionId = 2;
    string Nick = 3;
    string Source = 4;
    string Avatar = 5;
    string Email = 6;
}

message AccessTokenResponse {
    Token token = 1;
    Identity identity = 2;
    string raw = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}
message RefreshTokenResponse {
    Token token = 1;
}

message ProfileRequest {
    string access_token = 1;
}
message ProfileResponse {
    string raw = 1;
    Identity identity = 2;
}
